--- a/runtimes/gitops-testing/in-cluster.yaml
+++ b/runtimes/gitops-testing/in-cluster.yaml
@@ -5,7 +5,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
   labels:
     codefresh.io/entity: internal-config
-    codefresh.io/internal: "true"
+    codefresh.io/internal: 'true'
   name: in-cluster
 spec:
   destination:
@@ -14,7 +14,8 @@ spec:
   project: default
   source:
     directory:
-      include: '{all-runtimes-all-clusters/*.yaml,all-runtimes-all-clusters/**/*.yaml,runtimes/gitops-testing/*.yaml,runtimes/gitops-testing/**/*.yaml,control-planes/*.yaml,control-planes/**/*.yaml}'
+      include: >-
+        {all-runtimes-all-clusters/**/*.yaml,all-runtimes-all-clusters/*.yaml,control-planes/**/*.yaml,control-planes/*.yaml,gitops-testing/cf-gitops-runtime.yaml,runtimes/gitops-testing/**/*.yaml,runtimes/gitops-testing/*.yaml}
       recurse: true
     path: resources
     repoURL: https://github.com/nharvey-octopus/gitops-runtime-configuration.git
@@ -25,4 +26,4 @@ spec:
       prune: true
       selfHeal: true
     syncOptions:
-    - allowEmpty=true
+      - allowEmpty=true
