--- a/runtimes/codefresh/in-cluster.yaml
+++ b/runtimes/codefresh/in-cluster.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     directory:
       include: >-
-        {all-runtimes-all-clusters/**/*.yaml,all-runtimes-all-clusters/*.yaml,codefresh/cf-gitops-runtime.yaml,codefresh/cf-testing.yaml,codefresh/gitops-source.yaml,codefresh/helloworld-production.yaml,codefresh/helloworld-staging.yaml,configurations/**/*.yaml,control-planes/**/*.yaml,control-planes/*.yaml,runtimes/codefresh/**/*.yaml,runtimes/codefresh/*.yaml}
+        {all-runtimes-all-clusters/**/*.yaml,all-runtimes-all-clusters/*.yaml,codefresh/cf-gitops-runtime.yaml,codefresh/gitops-source.yaml,codefresh/helloworld-production.yaml,codefresh/helloworld-staging.yaml,configurations/**/*.yaml,control-planes/**/*.yaml,control-planes/*.yaml,runtimes/codefresh/**/*.yaml,runtimes/codefresh/*.yaml}
       recurse: true
     path: resources
     repoURL: https://github.com/nharvey-octopus/gitops-runtime-configuration.git
