Added/Modified /resources/configurations/products/promo-testing-product.yaml

--- a/resources/configurations/products/promo-testing-product.yaml
+++ b/resources/configurations/products/promo-testing-product.yaml
@@ -3,4 +3,11 @@ kind: Product
 metadata:
   name: promo-testing-product
 spec:
+  promotionFlows:
+    - name: qa-prod
+      gitTriggerSelectors:
+        - key: commitMessage
+          operator: In
+          values:
+            - '*testing*'
   concurrency: queue
