Added/Modified /resources/configurations/products/promo-testing-product.yaml

--- a/resources/configurations/products/promo-testing-product.yaml
+++ b/resources/configurations/products/promo-testing-product.yaml
@@ -9,5 +9,5 @@ spec:
         - key: commitMessage
           operator: In
           values:
-            - '*[GitOps] Update image tag to vPR-*'
+            - '[GitOps] Update image tag to vPR-*'
   concurrency: queue
